--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -6,12 +6,8 @@
   </view>
 <view class="container">
   <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <!-- <text class="userinfo-nickname">{{userInfo.nickName}}</text> -->
-    </block>
-  </view>
+      <image class="userinfo-avatar"  src="{{avatarUrl}}" mode="cover"></image>
+      </view>
   <view class="userWelcome">
     <text class="user-welcome">Welcome To CXY' Blog!</text>
   </view>
