--- a/pages/account/feedback/feedback.wxml
+++ b/pages/account/feedback/feedback.wxml
@@ -6,14 +6,14 @@
       <view class='form-title'>
         联系方式:
       </view>
-      <input class='' type="text" placeholder="请输入联系方式" class='form-input'></input>
+      <input name="contact" type="text" placeholder="请输入联系方式" class='form-input'></input>
     </view>
      <view class="form-item form-textarea {{modalName==null?'':'hide'}}">
       <view class='form-title'>
         反馈内容:
       </view>
-      <textarea placeholder='请输入反馈内容' maxlength="-1"></textarea>
+      <textarea name="content" placeholder='请输入反馈内容' maxlength="-1"></textarea>
     </view>
   </view>
-  <button style="margin: 10rpx" type="primary">提交</button>
+  <button form-type="submit" style="margin: 10rpx" type="primary">提交</button>
   </form>
