--- a/pages/logIn/logIn.wxml
+++ b/pages/logIn/logIn.wxml
@@ -4,7 +4,7 @@
     <view class="main_text">
       <text class="login_word">LOGIN</text>
       <input name="account" class="input" placeholder="账号" />
-      <input name="password" class="input" placeholder="密码  " />
+      <input name="password"  type='password' class="input" placeholder="密码  " />
     </view>
     <view class="button-group">
       <button style="margin-right:5%" form-type="submit" size="mini">登录</button>
