--- a/pages/article/articleDetail/articleDetail.wxss
+++ b/pages/article/articleDetail/articleDetail.wxss
@@ -10,7 +10,6 @@
 .article-detail {
   padding: 0;
   background: #eee;
-
   min-height: 100%;
 }
 
@@ -18,12 +17,11 @@
   max-width: 1000px;
   margin: 0 auto;
   background: #fff;
-  
 }
 
 .header {
   position: relative;
-  padding-top: 44%;
+  padding-top: 50%;
   background-color: #eee;
   background-size: cover;
   background-position: 50%;
@@ -44,7 +42,7 @@
 }
 
 .caption {
-  padding: 30px 20px;
+  padding: 30px 10px;
 }
 
 .title {
@@ -61,6 +59,13 @@
 
 .article-section {
   padding: 0;
+}
+
+.article-tag {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 .article-tail {
@@ -104,6 +109,7 @@
   float: left;
   margin-top: 9px;
   margin-left: 8px;
+  margin-bottom: 8px;
 }
 
 .like-btn-img {
@@ -122,6 +128,7 @@
   float: left;
   margin-top: 9px;
   margin-left: 8px;
+  margin-bottom: 10px;
 }
 
 .resp-head {
@@ -129,73 +136,119 @@
   margin: 10px 0 13px 10px;
   font-size: 13px;
 }
-.comment{
-    border-radius: 2px;
-        margin-bottom: 7.5px;
-        padding: 10px 15px;
-        position: relative;
-        align-items: center;
-        background-color: white;
+
+.comment {
+  border-radius: 2px;
+  margin-bottom: 7.5px;
+  padding: 10px 15px;
+  position: relative;
+  align-items: center;
+  background-color: white;
 }
+
 .comment-info {
-        padding: 5px 0 7.5px 0;
-        margin-bottom: 9px;
-        color: gray;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: flex-end;
-        border-bottom: 1px solid #efefef;
+  padding: 5px 0 7.5px 0;
+  margin-bottom: 9px;
+  color: gray;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  border-bottom: 1px solid #efefef;
+}
 
-    }
+.comment-author {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+}
 
-    .comment-author {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-content: center;
-    }
+.comment-author-icon {
+  width: 320px;
+  height: 240px;
+  display: inline-block;
+  overflow: hidden;
+  vertical-align: text-bottom;
+  margin: 0;
+  border-radius: 10%;
+  max-width: 34px;
+  max-height: 34px;
+}
 
-    .comment-author-icon {
-        width: 320px;
-        height: 240px;
-        display: inline-block;
-        overflow: hidden;
-        vertical-align: text-bottom;
-        margin: 0;
-        border-radius: 10%;
-        max-width: 34px;
-        max-height: 34px;
-    }
+.comment-author-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 12px;
+  padding-left: 9px;
+}
 
-    .comment-author-info {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        font-size: 12px;
-        padding-left: 9px;
-    }
+.comment-author-position {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-size: 12px;
+  padding-left: 5px;
+}
 
-    .comment-author-position {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        font-size: 12px;
-        padding-left: 5px;
-    }
- .h2w-light{
-        color:#333;
-        background-color:white;
-    }
-    .h2w__p{
-        margin-bottom:15px;
-        font-size: 14px;
-    }
-    .zan-c-red{
-        color:#f44;
-        font-size: 12px;
-        margin-bottom: 10px;
-    }
-  page{
-  background:#eee;
+.comment-button {
+  display: flex;
+  flex-direction: column;
+}
+
+.h2w-light {
+  border-bottom: 1px solid #efefef;
+  color: #333;
+  background-color: white;
+}
+
+.h2w__p {
+  margin-bottom: 15px;
+  font-size: 14px;
+}
+
+.reply-text {
+  display: flex;
+  flex: row;
+}
+
+.zan-c-red {
+  color: #f44;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
+.deviation {
+  margin-left: 3%;
+}
+
+.article-tag-content {
+  padding: 3px 0 0px 5px;
+}
+
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
+.need-login {
+  height: 45px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  color: #999;
+}
+.line{
+  background-color: lightgray;
+  height: 1px;
+  width: 100%;
+}
+page {
+  background: #eee;
 }
