--- a/pages/account/editAccount/editAccount.wxml
+++ b/pages/account/editAccount/editAccount.wxml
@@ -1,2 +1,24 @@
 <!--pages/account/editAccount/editAccount.wxml-->
-<text>pages/account/editAccount/editAccount.wxml</text>
+<form>
+  <view class="form-box form-avatar-box">
+    <view class="form-avatar" bindtap="uploadPhoto" style='background-image:url({{avatarsrc}})'>
+      <!-- <text>修改/上传</text> -->
+    </view>
+  </view>
+  <view class='form-box'>
+    <view class="weui-cells weui-cells_after-title">
+      <navigator url="/pages/account/editAccount/editUsername/editUsername" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__bd">用户名</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access">{{username}}</view>
+      </navigator>
+      <navigator url="/pages/account/editAccount/editUserAccount/editUserAccount" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__bd">账号</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access">{{userAccount}}</view>
+      </navigator>
+      <navigator url="/pages/account/editAccount/editUserPassword/editUserPassword" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__bd">密码</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access">修改</view>
+      </navigator>
+    </view>
+    </view>
+</form>
