--- a/pages/account/editAccount/editUserPassword/editUserPassword.wxml
+++ b/pages/account/editAccount/editUserPassword/editUserPassword.wxml
@@ -1,6 +1,6 @@
 <!--pages/account/editAccount/editUserPassword/editUserPassword.wxml-->
 <form bindsubmit="submitPassword">
-<view style="margin-top: 10px"class='form-box'>
+<view style="margin-top: 10px"class='form-box shadow'>
     <view class="weui-cell weui-cell_input">
                 <view class="weui-cell__hd">
                     <view class="weui-label">当前密码</view>
