--- a/pages/account/editAccount/editUserPassword/editUserPassword.wxml
+++ b/pages/account/editAccount/editUserPassword/editUserPassword.wxml
@@ -6,7 +6,7 @@
                     <view class="weui-label">当前密码</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <input maxlength="30" class="weui-input" name="oldPwd" placeholder="请输入当前密码" password="true" focus="true"  />
+                    <input maxlength="20" class="weui-input" name="oldPwd" placeholder="请输入当前密码" password="true" focus="true"  />
                 </view>
             </view>
              <view class="weui-cell weui-cell_input">
@@ -14,7 +14,7 @@
                     <view class="weui-label">新密码</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <input maxlength="30" class="weui-input" placeholder="请输入新密码" name="newPwd1"password="true" />
+                    <input maxlength="20" class="weui-input" placeholder="请输入新密码" name="newPwd1"password="true" />
                 </view>
             </view>
              <view class="weui-cell weui-cell_input">
@@ -22,11 +22,11 @@
                     <view class="weui-label">确认新密码</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <input maxlength="30" class="weui-input" placeholder="确认新密码" password="true" name="newPwd2"/>
+                    <input maxlength="20" class="weui-input" placeholder="确认新密码" password="true" name="newPwd2"/>
                 </view>
             </view>
 </view>
 <view class="weui-btn-area">
-            <button class="weui-btn" type="primary" form-type="submit">确定</button>
+            <button class="weui-btn" type="primary" form-type="submit" style="background: #0099FF;">确定</button>
         </view>
 </form>
