--- a/pages/account/feedback/feedback.wxml
+++ b/pages/account/feedback/feedback.wxml
@@ -15,5 +15,5 @@
       <textarea name="content" placeholder='请输入反馈内容' maxlength="-1"></textarea>
     </view>
   </view>
-  <button form-type="submit" style="margin: 10rpx" type="primary">提交</button>
+  <button form-type="submit" style="margin: 10rpx; background: #0099FF;" type="primary">提交</button>
   </form>
