--- a/pages/article/article.wxml
+++ b/pages/article/article.wxml
@@ -5,7 +5,7 @@
     <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
       <block wx:for="{{imgUrls}}">
         <swiper-item>
-          <image src="{{item}}" class="slide-image" style="width:100%" />
+          <image src="{{item}}" class="slide-image" style="width:100%;height:150px" />
         </swiper-item>
       </block>
     </swiper>
