--- a/pages/register/register.wxml
+++ b/pages/register/register.wxml
@@ -1,34 +1,27 @@
-  <!--pages/register/register.wxml-->
- <form bindsubmit='handleRegister'>
- <view class='row'>
-        <view class='info'>
-               <input  name="account" class= 'info-input1' placeholder="请输入你的账号" />
-         </view>
-          <!-- <button class='button' bindtap='doGetCode' disabled='{{disabled}}' style="background-color:{{color}}" >{{text}}</button> -->
- </view>
- <!-- <view class='row'>
-        <view class='info'>
-               <input  class= 'info-input' bindinput="handleVerificationCode" placeholder="请输入你的验证码" />
-         </view>
- 
- </view> -->
+<!--pages/register/register.wxml-->
+<form bindsubmit='handleRegister'>
   <view class='row'>
-        <view class='info'>
-               <input name="username" class= 'info-input'  placeholder="请输入你的用户名" />
-         </view>
- 
- </view>
+    <view class='info'>
+      <input name="account" class='info-input1' placeholder="请输入你的账号(长度为3-20个字符)" maxlength="20" />
+    </view>
+  </view>
   <view class='row'>
-        <view class='info'>
-               <input name="password" type='password' class= 'info-input'  placeholder="请输入你的密码" />
-         </view>
- 
- </view>
+    <view class='info'>
+      <input name="username" class='info-input1' placeholder="请输入你的用户名(长度为3-20个字符)" maxlength="20" />
+    </view>
+
+  </view>
   <view class='row'>
-        <view class='info'>
-               <input name="passwordAgain" type='password' class= 'info-input' placeholder="请重新输入你的密码" />
-         </view>
- 
- </view>
- <button class='submit' form-type="submit">注册</button>
+    <view class='info'>
+      <input name="password" type='password' class='info-input1'  placeholder="请输入你的密码(长度为6-20个字符)" maxlength="20"/>
+    </view>
+
+  </view>
+  <view class='row'>
+    <view class='info'>
+      <input name="passwordAgain" type='password' class='info-input1' placeholder="请重新输入你的密码" maxlength="20"/>
+    </view>
+
+  </view>
+  <button class='submit' form-type="submit">注册</button>
 </form>
